`rds = rebase-diff --stat`

--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -41,6 +41,7 @@ alias grbcda="g rbcda"
 alias grbd="g rbd"
 alias grbi="g rbi"
 alias grd="g rd"
+alias grds="g rds"
 alias grba="g rba"
 alias grbc="g rbc"
 alias grbh="g rbh"
