`{touch,tch} = commit --amend --no-edit`

--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -84,3 +84,5 @@
   scm   = squashed-commit-message
   sds   = set-dates
   tr0   = empty-tree
+  touch = commit --amend --no-edit
+  tch   = commit --amend --no-edit
