`caaf = commit -a --amend -F-`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -12,6 +12,7 @@ alias gawt="g awt"
 alias gc="g c"
 alias gca="g ca"
 alias gcaa="g caa"
+alias gcaaf="g caaf"
 alias gcae="g cae"
 alias gcaf="g caf"
 alias gcamf="g camf"
