`smiu  = submodule update --init --recursive`

--- a/submodule/.git-rc
+++ b/submodule/.git-rc
@@ -18,6 +18,7 @@ alias gsmaf="g smaf"
 alias gsmc="g smc"
 alias gsmd="g smd"
 alias gsmi="g smi"
+alias gsmiu="g smiu"
 alias gsg="g sg"
 alias gslg="g slg"
 alias gsmg="g smg"
@@ -48,6 +49,7 @@ alias gsmsha="g smsha"
 alias gsmshs="g smshs"
 alias gsmu="g smu"
 alias gsmuf="g smuf"
+alias gsmui="g smui"
 alias gsmuq="g smuq"
 alias gsmur="g smur"
 alias gsmurf="g smurf"
