mv `pr = pull --rebase` from `push/` to `pull/`

--- a/pull/.gitconfig
+++ b/pull/.gitconfig
@@ -3,3 +3,4 @@
   plr = pull --rebase
   plrs = pull --rebase --recurse-submodules
   pls = pull --rebase --recurse-submodules
+  pr = pull --rebase
