fix `global-gitignore` typo

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -76,7 +76,7 @@
         gip = config --get-all --global include.path
         global-config-file = config --get-all --global include.path
         global-gitignore = add-core-excludes -g
-        ggi = global-git-ignore
+        ggi = global-gitignore
         gef = config --global --get-all core.excludesfile
         gefa = config --global --add core.excludesfile
         xf = config --global --get-all core.excludesfile
