`config-diff-command` improvements/aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -9,6 +9,12 @@ alias gagi="g agi"
 alias gaps="g aps"
 alias gcdc="g cdc"
 alias gcdcg="g cdcg"
+alias gcdg="g cdg"
+alias gcdgu="g cdgu"
+alias gcdu="g cdu"
+alias gctgu="g ctgu"
+alias gctu="g ctu"
+alias gctg="g ctg"
 alias gcdr="g cdr"
 alias gcds="g cds"
 alias gcdsd="g cdsd"
