`gmmb=git-merge-merge-base`

--- a/merge-base/.git-rc
+++ b/merge-base/.git-rc
@@ -4,4 +4,6 @@ alias gmb="g mb"
 alias gmbo="g mbo"
 alias gmbp="g mbp"
 alias gmbt="g mbt"
+alias gmmb="g mmb"
+alias gmmh="g mmh"
 alias gshmb="g shmb"
