`dsml="config --global diff.submodule log"`

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -73,6 +73,8 @@ alias gdnp="g dnp"
 alias gdnpg="g dnpg"
 alias gdnpgt="g dnpgt"
 alias gdnpt="g dnpt"
+alias gdsm="g dsm"
+alias gdsml="g dsml"
 alias ge="g e"
 alias gea="g ea"
 alias gef="g ef"
