`ph=HEAD^..HEAD`, `rh=refs/heads`

--- a/.git-rc
+++ b/.git-rc
@@ -92,8 +92,8 @@ export DEFAULT_REMOTE="${DEFAULT_REMOTE:-origin}"
 export h="HEAD"
 
 # Parent commit aliases
-export p="HEAD^"
-export pp="HEAD^2"
+export p="HEAD~1"
+export p1="HEAD~1"
 export p2="HEAD~2"
 export p3="HEAD~3"
 export p4="HEAD~4"
@@ -102,7 +102,11 @@ export p6="HEAD~6"
 export p7="HEAD~7"
 export p8="HEAD~8"
 export p9="HEAD~9"
-export p1="HEAD~10"
+export p10="HEAD~10"
+
+export pp="HEAD^2"
+export ph=HEAD^..HEAD
+export rh=refs/heads
 
 # Reflog history aliases
 export h1="HEAD@{1}"
