`default-remote` fix

--- a/remote/.git-rc
+++ b/remote/.git-rc
@@ -3,6 +3,8 @@
 defn gamr g amr
 defn gcd g cd
 defn gdfr g dfr
+defn gdrn g drn
+defn gdrv g drv
 defn gdrt g drt
 defn gfnr g fnr
 defn ggru g gru
