--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -55,6 +55,7 @@ alias grbor="g rbor"
 alias grbori="g rbori"
 alias grbot="g rbot"
 alias grbp="g rbp"
+alias grbs="g rbs"
 alias rbo="g rbo"
 alias grio="g rio"
 alias grlrb="g rlrb"
