fold `remote-branch-exists` into `branch-exists -r`

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -54,6 +54,8 @@ alias gbk="g bk"
 alias gpb="g pb"
 
 alias gbe="g be"
+alias gber="g ber"
+alias gbre="g bre"
 alias grbb="g rbb"
 alias grbe="g rbe"
 
