`checkout-b` improvements, `cobt=checkout-b-t`

--- a/checkout/.git-rc
+++ b/checkout/.git-rc
@@ -3,6 +3,7 @@
 alias gco="g co"
 alias gco-="g co-"
 alias gcob="g cob"
+alias gcobt="g cobt"
 alias gcof="g cof"
 alias gcoh="g coh"
 alias gcom="g com"
