`bt = branch --track=inherit`

--- a/branch/.git-rc
+++ b/branch/.git-rc
@@ -58,6 +58,7 @@ alias gber="g ber"
 alias gbre="g bre"
 alias grbb="g rbb"
 alias grbe="g rbe"
+alias gbt="g bt"
 
 alias gtb="g tb"
 alias gub="g ub"
