--- a/gitlab/.git-rc
+++ b/gitlab/.git-rc
@@ -22,7 +22,10 @@ gitlab_url_ssh() {
 export -f gitlab_url_ssh
 defn glus gitlab_url_ssh
 
-alias glob="glab repo view --web"
+alias glob="glab repo view --web -b"
+alias glow="glab repo view --web"
+alias glowb="glab repo view --web -b"
+
 gitlab_open_jobs() {
     web_url="$(glab repo view -F json | jq -r .web_url)"
     jobs_url="$web_url/-/jobs"
