--- a/remote/.gitconfig
+++ b/remote/.gitconfig
@@ -62,3 +62,10 @@
   rsu       = remote-set-url
 
   fnr       = find-only-remote
+
+  ob        = !git_open_web_branch.py
+  obn       = !git_open_web_branch.py -n
+  obnu      = !git_open_web_branch.py -nu
+  obnv      = !git_open_web_branch.py -nv
+  obu       = !git_open_web_branch.py -u
+  obv       = !git_open_web_branch.py -v
