`sct = set-committer-date`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -85,6 +85,7 @@ alias get="g et"
 alias gsad="g sad"
 alias gsps="g sps"
 alias gscd="g scd"
+alias gsct="g sct"
 alias gsds="g sds"
 alias gtr0="g tr0"
 
