`canm  = commit -a --amend -m`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -21,6 +21,7 @@ alias gcam="g cam"
 alias gcamt="g camt"
 alias gcamtf="g camtf"
 alias gcaam="g caam"
+alias gcanm="g canm"
 alias gcbn="g cbn"
 alias gcbns="g cbns"
 alias gccb="g ccb"
