--- a/commit/.gitconfig
+++ b/commit/.gitconfig
@@ -15,6 +15,7 @@
   caa   = commit -a --amend
   caaf  = commit -a --amend -F-
   caam  = commit -a --amend -m
+  canm  = commit -a --amend -m
   cae   = commit --allow-empty
   caf   = commit -aF-
   caem  = commit --allow-empty -m
