`diff.noprefix` aliases

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -72,7 +72,14 @@ alias gcgua="g cgua"
 alias gdnp="g dnp"
 alias gdnpg="g dnpg"
 alias gdnpgt="g dnpgt"
+alias gdnpgu="g dnpgu"
+alias gdnpu="g dnpu"
 alias gdnpt="g dnpt"
+alias gdpg="g dpg"
+alias gdptg="g dptg"
+alias gdpug="g dpug"
+alias gdpt="g dpt"
+alias gdpu="g dpu"
 alias gdsm="g dsm"
 alias gdsml="g dsml"
 alias ge="g e"
