generalize `set-committer-date` to `-info` (include committer name/emails)
also update `rebase-preserve-commit-info`, `reset-committer-rebase-head`

--- a/commit/.git-rc
+++ b/commit/.git-rc
@@ -86,6 +86,8 @@ alias get="g et"
 alias gsad="g sad"
 alias gsps="g sps"
 alias gscd="g scd"
+alias gscn="g scn"
+alias gsci="g sci"
 alias gsct="g sct"
 alias gsds="g sds"
 alias gtr0="g tr0"
