--- a/rebase/.git-rc
+++ b/rebase/.git-rc
@@ -35,8 +35,8 @@ alias grhl="g rhl"
 alias grhlh="g rhlh"
 alias grb="g rb"
 alias grbb="g rbb"
-alias grbcd="g rbcd"
-alias grbcda="g rbcda"
+alias grbci="g rbci"
+alias grbcia="g rbcia"
 alias grbd="g rbd"
 alias grbi="g rbi"
 alias grd="g rd"
@@ -71,8 +71,9 @@ alias grbud="g rbud"
 alias grud="g rud"
 
 alias grc="g rc"
-alias grcd="g rcd"
-alias grcdrbh="g rcdrbh"
+alias grci="g rci"
+alias grcr="g rcr"
+alias grcrbh="g rcrbh"
 alias gri="g ri"
 alias grir="g rir"
 alias grit="g rit"
