`ghgcd="gh gist create --web -d"`

--- a/gist/.git-rc
+++ b/gist/.git-rc
@@ -5,7 +5,7 @@ alias ghg="gh gist"
 alias ggc="gh gist create"
 alias ghgc="gh gist create"
 alias gop="gh gist create --web"
-alias ggcd="gh gist create --web -d"
+alias ghgcd="gh gist create --web -d"
 alias gsto="gh gist create --web -d"
 alias ggcdn="gh gist create -d"
 alias gst="gh gist create -d"
