`cpi = cherry-pick-preserve-committer-info`

--- a/cherry-pick/.git-rc
+++ b/cherry-pick/.git-rc
@@ -8,7 +8,8 @@ alias gcpa="g cpa"
 alias gcpc="g cpc"
 alias gcph="g cph"
 alias gcpn="g cpn"
-alias gcppcd="g cppcd"
+alias gcpi="g cpi"
+alias gcppc="g cppc"
 alias gcps="g cps"
 alias gacpc="g acpc"
 alias gcpsh="g cpsh"
