`push-user-branch` aliases

--- a/push/.git-rc
+++ b/push/.git-rc
@@ -43,6 +43,8 @@ alias gpto="g pto"
 alias gptn="g ptn"
 alias gpu="g pu"
 alias gpub="g pub"
+alias gpbf="g pbf"
+alias gpbn="g pbn"
 alias gpubf="g pubf"
 alias gpubn="g pubn"
 alias gpx="g px"
