ghow: open current branch, ghwr: refactor branch resolution
- Factor out branch resolution logic to util/branch_resolution.py
- ghwr: use shared utility, intelligently pick remote ref by SHA match
- ghow: new Python script to open current branch in browser
- Both commands now handle multiple remote refs (e.g. o/test vs o/rw/test)

--- a/github/.git-rc
+++ b/github/.git-rc
@@ -74,7 +74,8 @@ github_open_settings_secrets_actions() {
 export -f github_open_settings_secrets_actions
 defn ghossa github_open_settings_secrets_actions
 
-defn ghow gh repo view --web
+defn ghow github-open-web.py
+defn ghowd github-open-web.py -d
 defn ghowb gh repo view --web -b
 defn ghob gh repo view --web -b
 
