`gsie="g sid"` (email-only alias)

--- a/config/.git-rc
+++ b/config/.git-rc
@@ -113,6 +113,9 @@ alias gsdm="g sdm"
 alias gsdmt="g sdmt"
 alias gsmt="g smt"
 alias gsid="g sid"
+alias gsie="g sid"  # email-only mode (pass email as single arg)
+alias gsieg="g sid -g"  # global email-only mode
+alias ggsie="g sid -g"  # global email-only mode (alternate)
 alias gsig="g sig"
 alias gsgid="g sgid"
 alias ggsid="g gsid"
