`ghow`: support gists

--- a/github/.git-rc
+++ b/github/.git-rc
@@ -76,6 +76,7 @@ defn ghossa github_open_settings_secrets_actions
 
 defn ghow github-open-web.py
 defn ghowd github-open-web.py -d
+defn ghowg github-open-web.py -g  # open gist
 defn ghowb gh repo view --web -b
 defn ghob gh repo view --web -b
 
