github-pr.py: add dry-run, diff cmd, and gist footer support
- Add --dry-run flag to push/sync commands to preview changes
- Add diff command to compare local vs remote PR descriptions
- Support --footer flag to add gist URL footer to PR descriptions
- Fix sync_to_gist to return gist URL when requested
- Add ghprd and ghprpf aliases
- Fix git-rebase-exec-step to check for sequencer directory (not just todo file)

--- a/github/.git-rc
+++ b/github/.git-rc
@@ -471,6 +471,16 @@ defn ghs gh secret list
 defn ghsd gh secret delete
 defn ghss gh secret set
 
-alias ghpr='gh pr'
+alias ghprr='gh pr'                   # raw gh pr command
+alias ghpr='github-pr.py'             # main github-pr.py command
+alias ghpri='github-pr.py init'       # initialize new PR draft
+alias ghpro='github-pr.py open'       # create/open new PR from draft
+alias ghprc='github-pr.py clone'      # clone existing PR
+alias ghprp='github-pr.py push'       # push to PR (auto-adds footer if gist exists)
+alias ghprl='github-pr.py pull'       # pull from PR (and optionally push back)
+alias ghprpg='github-pr.py push -g'   # push with gist backup (auto-footer)
+alias ghprpo='github-pr.py push -o'   # push and open in browser
+alias ghprpF='github-pr.py push -F'   # push WITHOUT footer
+alias ghprd='github-pr.py diff'       # diff local vs remote PR
 alias prv='gh pr view'
 alias pre='gh pr edit'
